# infrastructure/entry-points/reactive-web/src/main/java/co/com/franquicias/api/dto/request/ActualizarNombrePeticion.java
@@ -1,0 +1,15 @@
+package co.com.franquicias.api.dto.request;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class ActualizarNombrePeticion {
+
+    private String nombre;
+}
